# packages/server/src/express.ts
@@ -1,24 +1,48 @@
-import { InfuraProvider } from '@ethersproject/providers'
-// import { Token } from '@standard-crypto/opensea-batch-purchaser-openapi/dist/types/model/models'
+import { getNetwork, InfuraProvider } from '@ethersproject/providers'
+import { Token } from '@standard-crypto/opensea-batch-purchaser-openapi/dist/types/model/models'
+import { MetaTransaction } from 'ethers-multisend'
 import express, { Request } from 'express'
+import { OpenSeaAsset } from 'opensea-js/lib/types'
 
 import API from './api'
 
-type Token = any
-
-const mainnetApiKey = process.env.OPENSEA_API_KEY_MAINNET
-if (mainnetApiKey === undefined || mainnetApiKey === '') {
-  throw new Error('mainnetApiKey not set')
+const openseaMainnetApiKey = process.env.OPENSEA_API_KEY_MAINNET
+if (openseaMainnetApiKey === undefined || openseaMainnetApiKey === '') {
+  throw new Error('openseaMainnetApiKey not set')
 }
 
-const rinkebyApiKey = process.env.OPENSEA_API_KEY_RINKEBY
-if (rinkebyApiKey === undefined || rinkebyApiKey === '') {
-  throw new Error('rinkebyApiKey not set')
+const openseaRinkebyApiKey = process.env.OPENSEA_API_KEY_RINKEBY
+if (openseaRinkebyApiKey === undefined || openseaRinkebyApiKey === '') {
+  throw new Error('openseaRinkebyApiKey not set')
 }
+
+const alchemyMainnetApiKey = process.env.ALCHEMY_API_KEY_MAINNET
+if (alchemyMainnetApiKey === undefined || alchemyMainnetApiKey === '') {
+  throw new Error('alchemyMainnetApiKey not set')
+}
+
+const alchemyRinkebyApiKey = process.env.ALCHEMY_API_KEY_RINKEBY
+if (alchemyRinkebyApiKey === undefined || alchemyRinkebyApiKey === '') {
+  throw new Error('alchemyRinkebyApiKey not set')
+}
+
+const api = new API(
+  {
+    mainnet: openseaMainnetApiKey,
+    rinkeby: openseaRinkebyApiKey,
+  },
+  {
+    mainnet: new InfuraProvider('mainnet'),
+    rinkeby: new InfuraProvider('rinkeby'),
+  },
+  {
+    mainnet: alchemyMainnetApiKey,
+    rinkeby: alchemyRinkebyApiKey,
+  }
+)
 
 type EmptyObject = Record<string, never>
 
-// const _app = express ? express() : express_test()
 const _app = express()
 _app.use(express.json())
 
@@ -26,16 +50,36 @@ _app.get('/hello', function (req, res) {
   res.send('Hello!')
 })
 
-_app.get('/asset', function (req: Request<EmptyObject, string, EmptyObject, Token>, res) {
-  const api = new API(
-    {
-      mainnet: mainnetApiKey,
-      rinkeby: rinkebyApiKey,
-    },
-    new InfuraProvider(),
-  )
-  const token = req.query
-  res.send(token.id)
+type GetAssetParams = {
+  contractAddress: string,
+  id: string,
+  network: string
+}
+
+_app.get('/asset', async function (req: Request<EmptyObject, OpenSeaAsset, EmptyObject, GetAssetParams>, res) {
+  const token: Token = req.query;
+  const {network: networkName} = req.query;
+  const network = getNetwork(networkName);
+  const asset = await api.getAsset({token, network})
+  res.json(asset);
+})
+
+type BatchTransactionParams = {
+  tokens: Token[]
+  network: string
+  recipient: string
+}
+
+_app.post('/batch-transaction', async function (req: Request<EmptyObject, MetaTransaction, BatchTransactionParams, EmptyObject>, res, next) {
+  try {
+    const {tokens, network: networkName, recipient} = req.body;
+    const network = getNetwork(networkName);
+    const batchTx = await api.createBatchTransaction({tokens, network, tokenRecipientAddr: recipient});
+    res.json(batchTx);
+  } catch (e) {
+    console.error(e);
+    next(e);
+  }
 })
 
 export const app = _app
